--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "internet-shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shurinokoleksandr.github.io/pizza-shop/",
+  "homepage": "https://shurinokoleksandr.github.io/pizza-shop",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
